--- a/frontend/mysepace/package.json
+++ b/frontend/mysepace/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.6",
     "auth0-js": "^9.14.3",
     "core-js": "^3.6.5",
     "router": "^1.3.5",
