--- a/frontend/mysepace/package.json
+++ b/frontend/mysepace/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.13.6",
     "auth0-js": "^9.14.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "router": "^1.3.5",
+    "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
