--- a/frontend/mysepace/package.json
+++ b/frontend/mysepace/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -14,6 +16,7 @@
     "core-js": "^3.6.5",
     "router": "^1.3.5",
     "tailwindcss": "^2.0.3",
+    "test-utils": "^1.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
@@ -21,7 +24,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
