--- a/ServerAPIFirst/package.json
+++ b/ServerAPIFirst/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.get.js --exit"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sinon": "^9.2.4",
+    "supertest": "^6.1.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0"
   }
 }
